--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -13,6 +13,7 @@
     "com.unity.ide.rider": "3.0.5",
     "com.unity.ide.visualstudio": "2.0.7",
     "com.unity.ide.vscode": "1.2.3",
+    "com.unity.inputsystem": "1.0.2",
     "com.unity.render-pipelines.universal": "11.0.0",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "3.0.4",
