--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# Blender .gitignore
+*.pyc
+*.blend[1-9]
+__pycache__
+/dist/
+
 # This .gitignore file should be placed at the root of your Unity project directory
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
