--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,13 +10,14 @@
   ],
   "dependencies": {
     "com.unity.burst": "1.4.8",
+    "com.unity.coding": "0.1.0-preview.20",
     "com.unity.collab-proxy": "1.3.9",
-    "com.unity.ide.visualstudio": "2.0.7",
+    "com.unity.ide.visualstudio": "2.0.8",
     "com.unity.inputsystem": "1.0.2",
     "com.unity.render-pipelines.universal": "11.0.0",
     "com.unity.test-framework": "1.1.24",
     "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.5.4",
+    "com.unity.timeline": "1.5.5",
     "com.unity.ugui": "1.0.0",
     "jp.keijiro.noiseshader": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
