--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,7 +9,7 @@
     }
   ],
   "dependencies": {
-    "com.unity.burst": "1.4.8",
+    "com.unity.burst": "1.5.0-pre.5",
     "com.unity.coding": "0.1.0-preview.20",
     "com.unity.collab-proxy": "1.3.9",
     "com.unity.ide.visualstudio": "2.0.8",
@@ -19,7 +19,7 @@
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.5.5",
     "com.unity.ugui": "1.0.0",
-    "jp.keijiro.noiseshader": "1.0.0",
+    "jp.keijiro.noiseshader": "2.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
