--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,9 +9,9 @@
     }
   ],
   "dependencies": {
-    "com.unity.burst": "1.5.0-pre.5",
+    "com.unity.burst": "1.5.4",
     "com.unity.coding": "0.1.0-preview.20",
-    "com.unity.collab-proxy": "1.3.9",
+    "com.unity.collab-proxy": "1.5.7",
     "com.unity.ide.visualstudio": "2.0.8",
     "com.unity.inputsystem": "1.0.2",
     "com.unity.render-pipelines.universal": "11.0.0",
