--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     }
   ],
   "dependencies": {
+    "com.github.siccity.xnode": "https://github.com/siccity/xNode.git",
     "com.unity.burst": "1.5.4",
     "com.unity.coding": "0.1.0-preview.20",
     "com.unity.collab-proxy": "1.5.7",
